 * Only open browser on left-click of cover art box (PICARD-190)
 * Fix Lookup in Browser (previously 'tag lookup') for clusters (PICARD-186)
 * Lookup in Browser will now not use MBIDs to lookup unmatched files/clusters
 * Add Date/Country to CD Lookup results dialog (PICARD-198)
 * Fix/reset album folksonomy tag counts while refreshing releases (PICARD-4)
 * Plugins actions can how create sub-menus using the MENU class attribute
 * New plugin hook register_clusterlist_action
 * Display the port Picard is listening on at bottom right status bar (PICARD-191)
 * Make album drops from right hand pane to left default to "unmatched files" again (PICARD-33)

Version 0.16 - 2011-10-23
 * Added AcoustID support.
 * Fixed track metadata plugins.
 * Added new internal %_totalalbumtracks% tag field. (PICARD-16)
 * Track metadata plugins now run also on non-album tracks. (PICARD-7)
 * Fixed custom Various Artists name on the %albumartist% field. (PICARD-5)
 * Album artist is now correctly "translated". (PICARD-1)
 * Unicode punctuation is now converted to ASCII by default.
 * WavPack correction files are moved together with the main files. (PICARD-15)
 * Unicode filename normalization on OS X.
 * Original release date is now saved into %originaldate%.
 * Allow tagging with localized artist aliases (PICARD-17)
 * Added a quit confirmation dialog. (PICARD-46)
 * Standalone recordings can be tagged with relationships now. (PICARD-10)
 * Refreshing an album will refresh its "other versions" listing. (PICARD-8)
 * "Unicode punctuation to ASCII" now works on album-level metadata. (PICARD-50)
 * DJ-mix tags should only be written to the medium where they apply. (PICARD-20)
 * Support URL redirects in web service/network request module (PICARD-54)
 * Jamendo and Archive.org cover art is displayed on web page, but not loaded by Picard plugin (PICARD-52)
 * Edits to metadata in "Details..." menu not reflected in UI (PICARD-13)